# rustpacket

./: Cargo.toml  IMPLEMENTATION.md  PACKAGES.md  README.md
benches/: README.md
src/: lib.rs  packet.rs
src/layers/: ethernet.rs  mod.rs
src/packet/: mod.rs
src/pcap/: error.rs  linktype.rs  mod.rs  packet.rs  pcap.rs  reader.rs  types.rs  writer.rs
tests/: reader.rs  test_pcap.rs
tests/data/: http_file_truncated.pcap  http_ok_truncated.pcap
