[package]
name = "rustpacket"
version = "0.1.0"
authors = ["nmavis <nmavis@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buf_redux = "^0.8.4" 
byteorder = "^1.3.2"
failure = "0.1.6" 
chrono = "^0.4.10"
pnet_base = "^0.25.0"